...
// Like R, but C
object C {
  object Tag {
    // Planning
    const val planning_no_set_time = "planning_no_set_time"
    const val planning_scheduled = "planning_scheduled"
    const val planning_week = "planning_week"
    const val planning_list = "planning_list"
    const val planning_previous = "planning_previous"
    const val planning_next = "planning_next"
    const val planning_today = "planning_today"
    const val planning_heading = "planning_heading"
    const val planning_empty = "planning_empty"
    const val planning_loading = "planning_loading"
    const val planning_error = "planning_error"
    const val planning_retry = "planning_retry"
    const val planning_add = "planning_add"

...
